# TaskManager

./: README.md
TaskAssistant/: Cargo.toml  tasks.db
TaskAssistant/src/: Taskmanager.rs  db.rs  main.rs  main_bk.rs  task.rs  taskViewModel.rs  viewmodel.rs
ToDo/src/: Task.rs  dbThread.rs
